[metadata]
name = stockpyl
version = 0.0.13
description = A Python package for inventory optimization and simulation
long_description = file: README.md
long_description_content_type = text/markdown
author = Larry Snyder
author_email = larry.snyder@lehigh.edu
url = https://github.com/LarrySnyder/stockpyl
keywords = inventory, optimization
license = GNU General Public License v3 (GPLv3)
license_files = LICENSE
classifiers = 
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Education
    Topic :: Office/Business
    Topic :: Scientific/Engineering

[options]
zip_safe=False
include_package_data=True
install_requires =
    build>=0.0.2
    jsonpickle>=1.0
    matplotlib>=2.0
    networkx>=2.0
    numpy>=1.21
    scipy>=1.6.0
    setuptools>=49.6
    sphinx==4.5.0
    sphinx_rtd_theme>=1.0.0
    sphinx_toolbox>=3.1.2
    tabulate>=0.8.7
    tqdm>=4.1.0
# Since we are using a "src" layout, we need the following:
package_dir=
	=src
packages=find:

[options.packages.find]
where=src
[bumpver]
current_version = "0.0.13"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = True
tag = True
push = False

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
    version = {version}

